--- a/MyEvernoteSolution/MyEvernote.WebApp/Content/shop-homepage.css
+++ b/MyEvernoteSolution/MyEvernote.WebApp/Content/shop-homepage.css
@@ -8,6 +8,11 @@ body {
     padding-top: 70px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
 }
 
+.profilePicture{
+    width:65px;
+    height:65px;
+}
+
 .slide-image {
     width: 100%;
     height: 300px;
@@ -60,4 +65,8 @@ body {
 
 footer {
     margin: 50px 0;
+}
+
+.thumbborder {
+    border: 2px solid black;
 }
