Yorum/Beğeni/Kullanıcı işlemleri tamam ana fonksiyonların hepsi bitti detaylar var

--- a/MyEvernoteSolution/MyEvernote.WebApp/Views/Shared/_Layout.cshtml
+++ b/MyEvernoteSolution/MyEvernote.WebApp/Views/Shared/_Layout.cshtml
@@ -13,8 +13,14 @@
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
     <!-- Custom CSS --><!--eklemek şart-->
     <link href="~/Content/shop-homepage.css" rel="stylesheet" />
+    <!--Carousel CSS-->
+    <link href="~/Content/owl.carousel.min.css" rel="stylesheet" />
+    <link href="~/Content/owl.theme.default.min.css" rel="stylesheet" />
+    <!--Carousel JS-->
+    <script src="~/Scripts/jquery.min.js"></script>
+    <script src="~/Scripts/owl.carousel.min.js"></script>
     <!-- jQuery -->
-    <script src="~/Scripts/jquery-3.1.1.min.js"></script>
+    @*<script src="~/Scripts/jquery-3.1.1.min.js"></script>*@
     <!-- Bootstrap Core JavaScript -->
     <script src="~/Scripts/bootstrap.min.js"></script>
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
