mail ile aktifleştirme tamam düzenlemeleri yapılıcak!

--- a/MyEvernoteSolution/MyEvernote.WebApp/Views/Home/indexdeneme.cshtml
+++ b/MyEvernoteSolution/MyEvernote.WebApp/Views/Home/indexdeneme.cshtml
@@ -9,7 +9,7 @@
                 <input type="submit" value="Submit weakly typed form" />
 
             </form>
-            <p>@ViewBag.pas</p>
+            <p>@ViewBag.result</p>
 </div>
 
     </div>
